# contrib

./: .gitignore  README.rst  gramine.code-workspace
.github/workflows/: CoCo_MYSQL_DEBUG.yaml
Curated-Apps/: .gitignore  README.md  curate.py
Curated-Apps/pytorch/: README.md  pytorch-gsc.dockerfile.template  pytorch.manifest.template
Curated-Apps/pytorch/base_image_helper/: .gitignore  README.md  helper.sh
Curated-Apps/redis/: .gitignore  README.md  redis-gsc.dockerfile.template  redis.manifest.template
Curated-Apps/util/: config.yaml.template  constants.py  curation_script.sh
Curated-Apps/verifier/: .gitignore  helper.sh  verifier.dockerfile.template  verifier_helper_script.sh
Curated-Apps/workloads/mariadb/: README.md  docker_run_flags.txt  insecure_args.txt  mariadb-gsc.dockerfile.template  mariadb.manifest.template
Curated-Apps/workloads/memcached/: .gitignore  README.md  memcached-gsc.dockerfile.template  memcached.manifest.template
Curated-Apps/workloads/mysql/: .gitignore  README.md  mysql-gsc.dockerfile.template  mysql.manifest.template
Curated-Apps/workloads/pytorch/: .gitignore  README.md  pytorch-gsc.dockerfile.template  pytorch.manifest.template
Curated-Apps/workloads/redis/: .gitignore  README.md  common_args.txt  redis-gsc.dockerfile.template  redis.manifest.template
Curated-Apps/workloads/sklearn/: .gitignore  README.md  sklearn-gsc.dockerfile.template  sklearn.manifest.template
Curated-Apps/workloads/tensorflow-serving/: .gitignore  README.md  insecure_args.txt  (+2 more)
Documentation/: Doxyfile  conf.py  index.rst  requirements.txt
Examples/aks-attestation/: README.md  aks-secret-prov-client-deployment.yaml  aks-secret-prov-client.dockerfile  aks-secret-prov-client.manifest  aks-secret-prov-server-azure.dockerfile  aks-secret-prov-server-deployment.yaml  aks-secret-prov-server.dockerfile  base-image-generation-script.sh  install_gramine.sh
Examples/aks-python-helloworld/: README.md  README.rst  gsc-aks-python-deployment.yaml  python.manifest
GSC-Image-Curation/: .gitignore  README.md  constants.py  curate.py  curation_script.sh
GSC-Image-Curation/pytorch/: .gitignore  README.md  pytorch-gsc.dockerfile.template  pytorch.manifest  pytorch.manifest.template
GSC-Image-Curation/redis/: .gitignore  README.md  redis-gsc.dockerfile  redis-gsc.dockerfile.template  redis.manifest  redis.manifest.template
GSC-Image-Curation/util/: config.yaml  constants.py  curation_script.sh
GSC-Image-Curation/verifier/: .gitignore  install_gramine.sh  verifier.dockerfile.template  verifier_helper_script.sh
GSC-Image-Curation/verifier_image/: .gitignore  verifier.dockerfile  verifier.dockerfile.template  verifier_helper_script.sh
Integrations/azure/ra_tls_maa/: .gitignore  README.md  meson.build
Integrations/azure/ra_tls_maa/helpers/: gramine-v1.4-ci-examples.patch  gramine-v1.5-ci-examples.patch  gramine-v1.6-ci-examples.patch
Integrations/azure/ra_tls_maa/src/: ra_tls.map  ra_tls_verify_maa.c  secret_prov_verify_maa.c
Integrations/azure/ra_tls_maa/subprojects/: .gitignore
Integrations/azure/ra_tls_maa/subprojects/packagefiles/mbedtls/: compile-curl.sh  meson.build
Integrations/hsm-akv/: README.md  gramine-sgx-akv-sign
Integrations/ita/ra_tls_ita/subprojects/packagefiles/mbedtls/: meson.build
Intel-Confidential-Compute-for-X/: .gitignore  README.md  curate.py
Intel-Confidential-Compute-for-X/Mbed_debug/: README.md  ssl_client.dockerfile  ssl_server.dockerfile
Intel-Confidential-Compute-for-X/util/: .gitignore  constants.py  curation_script.sh
Intel-Confidential-Compute-for-X/verifier/: .gitignore  helper.sh  verifier.dockerfile.template
debian/: .gitignore  changelog  control  copyright  gramine-ratls-ita.lintian-overrides  gramine-ratls-maa.lintian-overrides  rules
tensorflow-serving-cluster/: README.md
tensorflow-serving-cluster/kubernetes/: README.md  install_kubernetes.sh
tensorflow-serving-cluster/tensorflow-serving/: README.md  download_model.sh  generate_ssl_config.sh  model_graph_to_saved_model.py  run_gramine_tf_serving.sh  run_tf_serving.sh
(+114 files in other folders)
